--- a/package.json
+++ b/package.json
@@ -4,12 +4,33 @@
   "description": "jquery 使用",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --porcess --hot"
   },
   "repository": {
     "type": "git",
     "url": "git"
   },
   "author": "tjy",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "jquery": "^1.8.2",
+    "json-loader": "^0.5.4",
+    "path": "^0.12.7",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.14.0",
+    "babel-jest": "^15.0.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.5.0"
+  }
 }
